Refactor OpenAICallsService to streamline image response handling